# Tunix

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: ruozhiba.json
data/processed/: train.json  val.json
src/: train.py  webui.py
src/data/: preprocess.py
tests/: download.py  test_dataset.py  test_model.py  test_sft_dataset.py
tunix/: data_convert.py  test_dataset.py  train.py  webui.py
tunix/data/: __init__.py  collator.py  dataset.py  preprocess.py
tunix/model/: loader.py
tunix/qwen3_5_lora/: README.md  adapter_config.json  tokenizer_config.json
tunix/qwen3_lora/: README.md  adapter_config.json
tunix/qwen3_vl_lora/: README.md  adapter_config.json  tokenizer_config.json
